--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -5791,7 +5791,7 @@ These APIs all depend on build option (`JERRY_BUILTIN_PROXY`).
 
 **Summary**
 
-Gets the target object of a Proxy object
+Gets the target object of a Proxy object.
 
 *Notes*:
 - This API depends on a build option (`JERRY_BUILTIN_PROXY`) and can be checked
@@ -5804,7 +5804,7 @@ Gets the target object of a Proxy object
 
 ```c
 jerry_value_t
-jerry_get_proxy_target (jerry_value_t proxy_value)
+jerry_get_proxy_target (jerry_value_t proxy_value);
 ```
 
 - `proxy_value` - Proxy object value
@@ -5838,6 +5838,60 @@ jerry_get_proxy_target (jerry_value_t proxy_value)
 
 - [jerry_create_proxy](#jerry_create_proxy)
 - [jerry_create_special_proxy](#jerry_create_special_proxy)
+- [jerry_get_proxy_handler](#jerry_get_proxy_handler)
+
+## jerry_get_proxy_handler
+
+**Summary**
+
+Gets the handler object of a Proxy object.
+
+*Notes*:
+- This API depends on a build option (`JERRY_BUILTIN_PROXY`) and can be checked
+  in runtime with the `JERRY_FEATURE_PROXY` feature enum value,
+  see: [jerry_is_feature_enabled](#jerry_is_feature_enabled).
+- The es.next profile enables this by default.
+
+
+**Prototype**
+
+```c
+jerry_value_t
+jerry_get_proxy_handler (jerry_value_t proxy_value);
+```
+
+- `proxy_value` - Proxy object value
+- return value
+  - type error - if proxy_value is not a Proxy object
+  - handler object - otherwise
+
+*New in version [[NEXT_RELEASE]]*.
+
+**Example**
+
+```c
+{
+  jerry_value_t target = jerry_create_object ();
+  jerry_value_t handler = jerry_create_object ();
+  jerry_value_t proxy = jerry_create_proxy (target, handler);
+
+  jerry_release_value (target);
+  jerry_release_value (handler);
+
+  handler = jerry_get_proxy_handler (proxy);
+
+  // ... usage of the handler
+
+  jerry_release_value (handler);
+  jerry_release_value (proxy);
+}
+```
+
+**See also**
+
+- [jerry_create_proxy](#jerry_create_proxy)
+- [jerry_create_special_proxy](#jerry_create_special_proxy)
+- [jerry_get_proxy_target](#jerry_get_proxy_target)
 
 
 # Acquire and release API values
