--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -8421,7 +8421,7 @@ Construct property descriptor from specified property.
 **Prototype**
 
 ```c
-bool
+jerry_value_t
 jerry_get_own_property_descriptor (const jerry_value_t  obj_val,
                                    const jerry_value_t prop_name_val,
                                    jerry_property_descriptor_t *prop_desc_p);
@@ -8431,6 +8431,8 @@ jerry_get_own_property_descriptor (const jerry_value_t  obj_val,
 - `prop_name_val` - property name
 - `prop_desc_p` - pointer to property descriptor
 - return value
+
+*Changed in version [[NEXT_RELEASE]]*: return value is changed to `jerry_value_t`
 
 **Example**
 
