Fix documentation and add back some tests
JerryScript-DCO-1.0-Signed-off-by: Gergo Csizi csgergo92@gmail.com

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -2126,6 +2126,85 @@ jerry_value_is_boolean (const jerry_value_t value)
 
 - [jerry_release_value](#jerry_release_value)
 
+## jerry_value_is_true
+
+**Summary**
+
+Returns whether the given `jerry_value_t` is a true value.
+
+**Prototype**
+
+```c
+bool
+jerry_value_is_true (const jerry_value_t value);
+```
+
+- `value` - api value
+- return value
+    - true, if the given `jerry_value_t` is true value
+    - false, otherwise
+
+*New in version [[NEXT_RELEASE]]*.
+
+**Example**
+
+```c
+{
+  jerry_value_t value;
+  ... // create or acquire value
+
+  if (jerry_value_is_true (value))
+  {
+    ...
+  }
+
+  jerry_release_value (value);
+}
+```
+
+**See also**
+
+- [jerry_release_value](#jerry_release_value)
+
+## jerry_value_is_false
+
+**Summary**
+
+Returns whether the given `jerry_value_t` is a false value.
+
+**Prototype**
+
+```c
+bool
+jerry_value_is_false (const jerry_value_t value);
+```
+
+- `value` - api value
+- return value
+    - true, if the given `jerry_value_t` is false value
+    - false, otherwise
+
+*New in version [[NEXT_RELEASE]]*.
+
+**Example**
+
+```c
+{
+  jerry_value_t value;
+  ... // create or acquire value
+
+  if (jerry_value_is_false (value))
+  {
+    ...
+  }
+
+  jerry_release_value (value);
+}
+```
+
+**See also**
+
+- [jerry_release_value](#jerry_release_value)
 
 ## jerry_value_is_constructor
 
